# purepale

./: .eslintrc.json  .gitignore  .stylelintrc.json  Makefile  README.md  package-lock.json  package.json  pyproject.toml
.github/: fix_poetry_for_ci.py
.github/workflows/: ci.yml  typos.yml
docs/: convert.md  wsl2.md
purepale/: blend_models.py  blip.py  cli.py  pipes.py  prompt.py  schema.py  serve.py
purepale/static/: app.js  index.html  style.css
