[tool.poetry]
name = "purepale"
version = "0.1.0"
description = ""
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
diffusers = {git="https://github.com/huggingface/diffusers", rev="534512bedb70ab6074fd4399a3ce15afc4394a37"}
transformers = "^4.21.1"
scipy = "^1.9.0"
uvicorn = "^0.18.2"
fastapi = "^0.79.1"
pydantic = "^1.9.2"
ftfy = "^6.1.1"
python-multipart = "^0.0.5"
timm = "^0.6.7" # For BLIP
fairscale = "^0.4.8" # For BLIP
torch = "^1.12.1"
torchvision = "^0.13.1"

[tool.poetry.dev-dependencies]
coverage = ">=5.3"
flake8 = ">=3.8.4"
isort = ">=5.6.4"
yamllint = ">=1.25.0"
pydocstyle = ">=5.1.1"
black = ">=21.9b0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
exclude = ["**/third_party", ".venv", "**/node_modules", "**/__pycache__",]
reportPrivateImportUsage = "information"
reportUnusedVariable="warning"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120


[tool.poetry.scripts]
purepale = "purepale.serve:main"

